fix: Hide overflow in projects - title

--- a/client/src/components/Projects/Projects.module.scss
+++ b/client/src/components/Projects/Projects.module.scss
@@ -27,6 +27,7 @@
   .card {
     border-radius: 4px;
     height: 150px;
+    overflow: hidden;
     transition: all 200ms ease;
   }
 
